# tomsfastmath

./: .gitignore  .travis.yml  Android.mk  CMakeLists.txt  LICENSE  README.md  SPONSORS  TODO  changes.txt  comba_mont_gen.c  comba_mult_gen.c  comba_sqr_gen.c  delme.c  filter.pl  fp_2expt.c  fp_add.c  fp_add_d.c  fp_addmod.c  fp_cmp.c  fp_cmp_d.c  fp_cmp_mag.c  fp_cnt_lsb.c  fp_count_bits.c  fp_div.c  fp_div_2.c  fp_div_2d.c  fp_div_d.c  fp_exptmod.c  fp_gcd.c  fp_ident.c  fp_invmod.c  fp_isprime.c  fp_lcm.c  fp_lshd.c  fp_mod.c  fp_mod_2d.c  fp_mod_d.c  fp_montgomery_calc_normalization.c  fp_montgomery_reduce.c  fp_montgomery_setup.c  (+57 more)
.github/workflows/: deploy.yml  main.yml
Android_jni/: Android.mk  Application.mk  README
demo/: CMakeLists.txt  rsa.c  stest.c  test.c  timing.c
doc/: makefile  tfm.tex
mtest/: makefile  mtest.c
pre_gen/: mpi.c
src/addsub/: fp_add.c  fp_add_d.c  fp_addmod.c  fp_cmp.c  fp_cmp_d.c  fp_cmp_mag.c  fp_sub.c  fp_sub_d.c  fp_submod.c  s_fp_add.c  s_fp_sub.c
src/bit/: fp_cnt_lsb.c  fp_count_bits.c  fp_div_2.c  fp_div_2d.c  fp_lshd.c  fp_mod_2d.c  fp_rshd.c
src/divide/: fp_div.c  fp_div_d.c  fp_mod.c  fp_mod_d.c
src/exptmod/: fp_2expt.c  fp_exptmod.c
src/generators/: .gitignore  comba_mont_gen.c  comba_mult_gen.c  comba_mult_smallgen.c  comba_sqr_gen.c  comba_sqr_smallgen.c  makefile
src/headers/: tfm.h  tfm_private.h
src/misc/: fp_ident.c  fp_memcpy.c  fp_memset.c  fp_rand.c  fp_set.c
src/mont/: fp_mont_small.i  fp_montgomery_calc_normalization.c  fp_montgomery_reduce.c  fp_montgomery_setup.c
src/mul/: fp_mul.c  fp_mul_2.c  fp_mul_2d.c  fp_mul_comba.c  fp_mul_comba_12.c  fp_mul_comba_17.c  fp_mul_comba_20.c  fp_mul_comba_24.c  fp_mul_comba_28.c  fp_mul_comba_3.c  fp_mul_comba_32.c  fp_mul_comba_4.c  fp_mul_comba_48.c  fp_mul_comba_6.c  fp_mul_comba_64.c  fp_mul_comba_7.c  fp_mul_comba_8.c  fp_mul_comba_9.c  fp_mul_comba_small_set.c  fp_mul_d.c  fp_mulmod.c
src/numtheory/: fp_gcd.c  fp_invmod.c  fp_isprime.c  fp_isprime_ex.c  fp_lcm.c  fp_prime_miller_rabin.c  fp_prime_random_ex.c
src/sqr/: fp_sqr.c  fp_sqr_comba.c  fp_sqr_comba_12.c  fp_sqr_comba_17.c  fp_sqr_comba_20.c  fp_sqr_comba_24.c  fp_sqr_comba_28.c  fp_sqr_comba_3.c  fp_sqr_comba_32.c  fp_sqr_comba_4.c  fp_sqr_comba_48.c  fp_sqr_comba_6.c  fp_sqr_comba_64.c  fp_sqr_comba_7.c  fp_sqr_comba_8.c  fp_sqr_comba_9.c  fp_sqr_comba_generic.c  fp_sqr_comba_small_set.c  fp_sqrmod.c
